# kopa

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  build.ts  package.json  tsconfig.json
.cursor/skills/effect-best-practices/references/: anti-patterns.md  effect-atom-patterns.md  service-patterns.md
.opencode/skills/effect-best-practices/: SKILL.md
.opencode/skills/effect-best-practices/references/: error-patterns.md  layer-patterns.md  observability-patterns.md  rpc-cluster-patterns.md  schema-patterns.md
kopa-daemon/: Cargo.toml
kopa-daemon/src/: clipboard.rs  db.rs  ipc.rs  main.rs
kopa-daemon/src/ipc/: handlers.rs  search.rs  types.rs
pkg/: PKGBUILD
scripts/: populate-history.ts
src/: errors.ts  index.tsx  main.ts  types.ts
src/services/: clipboard-service.ts  config-service.ts  history-service.ts
src/tui/: app.tsx
src/utils/: entries.ts  error-helpers.ts  hash.ts  image.ts  lock.ts  schema.ts  sharp-loader.ts
tui/: app.tsx  clipboard-list.tsx  db.ts  error.tsx  index.tsx  root-box.tsx
tui/components/: app.tsx  clipboard-list.tsx  error.tsx  root-box.tsx  search-input.tsx  toast-notification.tsx  toast.tsx
tui/lib/: db.ts  logger.ts  theme.tsx
tui/providers/: exit.tsx  theme.tsx  toast.tsx
tui/services/: clipboard.ts  daemon.ts  logger.ts
tui/utils/: border.ts  colors.ts  format.ts
