[package]
name = "kopa-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
directories = "6.0.0"
rand = "0.9.2"
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net", "sync", "macros", "io-util"] }
wl-clipboard-rs = "0.9.3"


[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unwrap_or_default = "deny"
get_unwrap = "deny"
map_unwrap_or = "deny"
unnecessary_unwrap = "deny"
mem_forget = "deny"
only_used_in_recursion = "deny"
allow_attributes = "deny"
clone_on_ref_ptr = "deny"
mutex_atomic = "deny"
rc_mutex = "deny"
